--- a/index.html
+++ b/index.html
@@ -1,90 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find the Capital Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js" defer></script>
-</head>
-<body class="bg-gradient-to-r from-blue-400 to-purple-500 min-h-screen flex items-center justify-center p-4">
-    <div class="max-w-2xl w-full bg-white bg-opacity-90 rounded-xl shadow-lg p-6">
-        <!-- Login Screen -->
-        <div id="loginScreen" class="text-center space-y-4">
-            <h1 class="text-3xl font-bold text-gray-800 mb-4">Welcome to Find the Capital!</h1>
-            <input type="text" id="username" placeholder="Enter your username" class="w-full p-2 border rounded-lg text-center">
-            <button id="startButton" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600 transition-colors">
-                Start Game
-            </button>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  </head>
+  <body
+    class="bg-gradient-to-r from-blue-400 to-purple-500 min-h-screen flex items-center justify-center p-4"
+  >
+    <div
+      class="max-w-2xl w-full bg-white bg-opacity-90 rounded-xl shadow-lg p-6"
+    >
+      <!-- Login Screen -->
+      <div id="loginScreen" class="text-center space-y-4">
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">
+          Welcome to Find the Capital!
+        </h1>
+        <input
+          type="text"
+          id="username"
+          placeholder="Enter your username"
+          class="w-full p-2 border rounded-lg text-center"
+        />
+        <button
+          id="startButton"
+          class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600 transition-colors"
+        >
+          Start Game
+        </button>
+      </div>
+
+      <!-- Game Screen -->
+      <div id="gameScreen" class="hidden">
+        <!-- Game Header -->
+        <div class="text-center mb-8">
+          <h1 class="text-3xl font-bold text-gray-800 mb-2">
+            Find the Capital
+          </h1>
+          <div class="flex justify-between items-center px-4">
+            <div class="text-lg font-semibold text-gray-600">
+              Score: <span id="score" class="text-green-600">0</span>
+            </div>
+            <div class="text-lg font-semibold text-gray-600">
+              Round: <span id="round" class="text-blue-600">1</span>/10
+            </div>
+            <div class="text-lg font-semibold text-gray-600">
+              Time: <span id="timer" class="text-red-600">15</span>s
+            </div>
+          </div>
         </div>
 
-        <!-- Game Screen -->
-        <div id="gameScreen" class="hidden">
-            <!-- Game Header -->
-            <div class="text-center mb-8">
-                <h1 class="text-3xl font-bold text-gray-800 mb-2">Find the Capital</h1>
-                <div class="flex justify-between items-center px-4">
-                    <div class="text-lg font-semibold text-gray-600">
-                        Score: <span id="score" class="text-green-600">0</span>
-                    </div>
-                    <div class="text-lg font-semibold text-gray-600">
-                        Round: <span id="round" class="text-blue-600">1</span>/10
-                    </div>
-                    <div class="text-lg font-semibold text-gray-600">
-                        Time: <span id="timer" class="text-red-600">15</span>s
-                    </div>
-                </div>
-            </div>
+        <!-- Game Content -->
+        <div id="gameContent" class="space-y-6">
+          <div class="text-center">
+            <h2 class="text-xl text-gray-700 mb-2">What is the capital of</h2>
+            <h3
+              id="countryName"
+              class="text-2xl font-bold text-indigo-600 mb-4"
+            ></h3>
+            <div id="flag" class="text-6xl mb-4"></div>
+          </div>
 
-            <!-- Game Content -->
-            <div id="gameContent" class="space-y-6">
-                <div class="text-center">
-                    <h2 class="text-xl text-gray-700 mb-2">What is the capital of</h2>
-                    <h3 id="countryName" class="text-2xl font-bold text-indigo-600 mb-4"></h3>
-                    <div id="flag" class="text-6xl mb-4"></div>
-                </div>
+          <div id="options" class="grid grid-cols-2 gap-4">
+            <!-- Options will be inserted here by JavaScript -->
+          </div>
 
-                <div id="options" class="grid grid-cols-2 gap-4">
-                    <!-- Options will be inserted here by JavaScript -->
-                </div>
+          <div id="answerFeedback" class="hidden text-center mt-4">
+            <p id="correctAnswer" class="text-xl font-bold"></p>
+          </div>
+        </div>
+      </div>
 
-                <div id="answerFeedback" class="hidden text-center mt-4">
-                    <p id="correctAnswer" class="text-xl font-bold"></p>
-                </div>
-            </div>
+      <!-- Game Over Screen -->
+      <div id="gameOver" class="hidden text-center space-y-4">
+        <h2 class="text-2xl font-bold text-gray-800">Game Over!</h2>
+        <p class="text-lg text-gray-600">
+          Final Score:
+          <span id="finalScore" class="font-bold text-green-600"></span>
+        </p>
+
+        <div class="mt-6">
+          <h3 class="text-xl font-bold text-gray-700 mb-2">Top Score</h3>
+          <div
+            id="topScore"
+            class="bg-yellow-200 p-4 rounded-lg text-lg font-semibold"
+          ></div>
         </div>
 
-        <!-- Game Over Screen -->
-        <div id="gameOver" class="hidden text-center space-y-4">
-            <h2 class="text-2xl font-bold text-gray-800">Game Over!</h2>
-            <p class="text-lg text-gray-600">Final Score: <span id="finalScore" class="font-bold text-green-600"></span></p>
-            
-            <div class="mt-6">
-                <h3 class="text-xl font-bold text-gray-700 mb-2">Top Score</h3>
-                <div id="topScore" class="bg-yellow-200 p-4 rounded-lg text-lg font-semibold"></div>
-            </div>
-
-            <div class="mt-6">
-                <h3 class="text-xl font-bold text-gray-700 mb-2">All Results</h3>
-                <table id="resultsTable" class="w-full border-collapse">
-                    <thead>
-                        <tr>
-                            <th class="border p-2 bg-gray-100">Username</th>
-                            <th class="border p-2 bg-gray-100">Score</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Results will be inserted here by JavaScript -->
-                    </tbody>
-                </table>
-            </div>
-
-            <button id="restartButton" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700 transition-colors mt-6">
-                Play Again
-            </button>
+        <div class="mt-6">
+          <h3 class="text-xl font-bold text-gray-700 mb-2">All Results</h3>
+          <table id="resultsTable" class="w-full border-collapse">
+            <thead>
+              <tr>
+                <th class="border p-2 bg-gray-100">Username</th>
+                <th class="border p-2 bg-gray-100">Score</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Results will be inserted here by JavaScript -->
+            </tbody>
+          </table>
         </div>
+
+        <button
+          id="restartButton"
+          class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700 transition-colors mt-6"
+        >
+          Play Again
+        </button>
+      </div>
     </div>
-
-  
-</body>
+  </body>
 </html>
